# gui-cursor-mover

./: Cargo.toml  Cargo.win  README.md
assets/: Icon.icns
src/: main.txt
