[package]
name = "gui_cursor_mover"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.23"         # Для создания GUI
eframe = "0.23"       # Framework для запуска GUI
enigo = "0.0.14"      # Для управления курсором мыши
rand = "0.8"          # Для генерации случайных чисел
scrap = "0.5.0"        # Для получения размеров экрана

[build]
rustflags = ["-C", "link-args=-Wl,-rpath,@executable_path/../Frameworks"]

[package.metadata.bundle]
name = "CursorMoverApp"        # Название приложения
identifier = "com.example.CursorMoverApp" # Уникальный идентификатор
icon = ["assets/icon.icns"]    # Путь к иконке (если есть)
version = "1.0"                # Версия приложения
short_description = "Move the cursor programmatically." # Краткое описание
long_description = """This is a simple program to move the cursor on macOS.""" # Длинное описание
